--- a/hsm1/Cargo.toml
+++ b/hsm1/Cargo.toml
@@ -13,3 +13,16 @@ syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit-m
 quote = "1.0"
 proc-macro2 = "1.0"
 state-result = { git = "https://github.com/winksaville/state-result" }
+
+[dev-dependencies]
+criterion = "0.3"
+iai = "0.1.1"
+
+[[bench]]
+name = "bench-dispatch"
+harness = false
+
+[[bench]]
+name = "bench-dispatch-iai"
+harness = false
+
