feat: Eliminate the need for non-hsm1 imports
In particular remove the need for:

  use state_result::*;
  use std::collections::VecQueue;

This was accomplished by creating a StateResult! macro and by moving
state_result package to proc-macro-hsm1 repo.

--- a/hsm1/Cargo.toml
+++ b/hsm1/Cargo.toml
@@ -12,7 +12,7 @@ proc-macro = true
 syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit-mut"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-state-result = { git = "https://github.com/winksaville/state-result" }
+state-result = { path = "../state-result" }
 
 [dev-dependencies]
 criterion = "0.3"
