--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-man = "0.3.0"
+duct = "0.13.5"
