build: Update Cargo.toml to use workspace.package
This, inherited members feature, is a new as of rust 1.64.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ members = [
   "state-result",
   "xtask",
 ]
+
+[workspace.package]
+version = "0.3.0"
+edition = "2021"
+license = "MIT OR Apache-2.0"
+authors = [ "Wink Saville<wink@saville.com>" ]
+
