--- a/hsm0/Cargo.toml
+++ b/hsm0/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hsm0"
 version = "0.1.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-authors = [ "Wink Saville<wink@saville.com>" ]
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 
 [dependencies]
