--- a/hsm1/Cargo.toml
+++ b/hsm1/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hsm1"
 version = "0.3.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-authors = [ "Wink Saville<wink@saville.com>" ]
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [lib]
 proc-macro = true
