--- a/state-result/Cargo.toml
+++ b/state-result/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "state-result"
 version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
