--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "xtask"
 version = "0.1.0"
-authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
-edition = "2018"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
