--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "hsm-1h-3s",
   "hsm-2h-2s",
   "hsm0",
+  "hsm0-executor",
   "hsm1",
   "state-result",
   "xtask",
@@ -14,3 +15,11 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = [ "Wink Saville<wink@saville.com>" ]
 
+[profile.release]
+#lto = true
+#codegen-units = 1
+panic = "abort"
+
+[profile.release-with-debug]
+inherits = "release"
+debug=true
