--- a/hsm0-with-executor/Cargo.toml
+++ b/hsm0-with-executor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "hsm0-executor"
-version = "0.6.0"
+name = "hsm0-with-executor"
+version = "0.7.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
