--- a/hsm0-with-executor/Cargo.toml
+++ b/hsm0-with-executor/Cargo.toml
@@ -9,3 +9,4 @@ license.workspace = true
 [dependencies]
 custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
 log = { version = "0.4.17", features = ["release_max_level_off"] }
+rand = "0.8.5"
