feat: Rename state-result to state_result
Also changed xtask/src/main.rs to not set -Cpanic=abort as I was getting a
compile error:

  wink@3900x 22-12-21T01:07:44.776Z:~/prgs/rust/myrepos/exper_hsm (main)
  $ cargo xt gen-cov
      Finished dev [unoptimized + debuginfo] target(s) in 0.01s
       Running `target/debug/xtask gen-cov`
  Run cargo clean []
  Create profraw data at /home/wink/prgs/rust/myrepos/exper_hsm/coverage
     Compiling cfg-if v1.0.0
     Compiling libc v0.2.138
     Compiling autocfg v1.1.0
     ...
     Compiling hsm0-with-executor v0.8.0 (/home/wink/prgs/rust/myrepos/exper_hsm/hsm0_with_executor)
     Compiling criterion v0.3.6
     Compiling proc_macro_hsm1 v0.3.0 (/home/wink/prgs/rust/myrepos/exper_hsm/proc_macro_hsm1)
  error: the linked panic runtime `panic_unwind` is not compiled with this crate's panic strategy `abort`

  error: could not compile `proc_macro_hsm1` due to previous error
  Error: "`cargo test --lib` with code-coverage Failed"

--- a/proc_macro_hsm1/Cargo.toml
+++ b/proc_macro_hsm1/Cargo.toml
@@ -12,7 +12,7 @@ proc-macro = true
 syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit-mut"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-state-result = { path = "../state-result" }
+state_result = { path = "../state_result" }
 
 [dev-dependencies]
 criterion = "0.3"
