--- a/state_result/Cargo.toml
+++ b/state_result/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "state-result"
-version = "0.1.0"
+name = "state_result"
+version = "0.2.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
