--- a/hsm0/Cargo.toml
+++ b/hsm0/Cargo.toml
@@ -7,5 +7,5 @@ license.workspace = true
 
 
 [dependencies]
-custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
+custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.2.0" }
 log = { version = "0.4.17", features = ["release_max_level_off"] }
