--- a/hsm0_with_executor/Cargo.toml
+++ b/hsm0_with_executor/Cargo.toml
@@ -7,6 +7,6 @@ license.workspace = true
 
 
 [dependencies]
-custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
+custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.2.0" }
 log = { version = "0.4.17", features = ["release_max_level_off"] }
 rand = "0.8.5"
